--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <div class="block">
             <h1 class="text-center mt-5" >Covid-19 Tracker</h1>
-            <h6 class="text-center">Live Corona Cases</h6>
+            <h6 class="text-center">Live Corona Cases for Maharashtra State.</h6>
         </div>
 
 
