--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>  
 
     <footer class="page-footer font-small cyan darken-3">
-        <div class="container">
+        <div class="">
         <div class="row">
     
             <!-- Grid column -->
